добавление шапки/навигации

--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
+  	<header class="main-header">
+  		<nav class="top-menu">
+  			<a class="main-header-logo">
+  				<img src="img/index-logo.svg" width: 109px; height: 19px; alt="логотип Техномарта">
+ 			</a>
+ 			<ul class="top-menu-navigation">
+ 				<li class="search">Поиск:</li>
+ 				<li><a href="bookmark">Закладки:</a></li>
+ 				<li><a href="basket">Корзина:</a></li>
+ 				<li><a class="button" href="checkout">Оформить заказ</a></li>	
+ 			</ul>
+ 		<h1>
+ 			<p>
+ 				Интернет-магазин </br>
+ 				строительных материалов </br>
+ 				и инструментов для ремонта
+ 			</p>
+ 	    </h1>
+ 		<nav class="main-navigation">
+ 			<ul> 
+ 				<li><a href="main.html">Главная</a></li>
+ 				<li><a href="company.html">Компания</a></li>
+ 				<li><a href="catalog.html">Каталог</a></li>
+ 				<li><a href="news.html">Новости</a></li>
+ 				<li><a href="special offer.html">Специпредложения</a></li>
+ 				<li><a href="delivery.html">Доставка</a></li>
+ 				<li><a href="contacts.html">Контакты</a></li>
+
+ 		    </ul>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
