--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  				<li><a href="company.html">Компания</a></li>
  				<li><a href="catalog.html">Каталог</a></li>
  				<li><a href="news.html">Новости</a></li>
- 				<li><a href="special offer.html">Специпредложения</a></li>
+ 				<li><a href="special offer.html">Спецпредложения</a></li>
  				<li><a href="delivery.html">Доставка</a></li>
  				<li><a href="contacts.html">Контакты</a></li>
 
