--- a/index.html
+++ b/index.html
@@ -16,26 +16,102 @@
  				<li><a href="basket">Корзина:</a></li>
  				<li><a class="button" href="checkout">Оформить заказ</a></li>	
  			</ul>
- 		<h1>
- 			<p>
+ 		</nav>
+ 			<h1>
+ 				<p>
  				Интернет-магазин </br>
  				строительных материалов </br>
  				и инструментов для ремонта
- 			</p>
- 	    </h1>
+ 				</p>
+ 			</h1>
+ 	    <section class="number and address">
+ 	    <p>
+ 	    	<address>+7 (812) 555-05-55 </br>
+ 	    			 г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8
+ 	    	</address>
+ 	    </p>
+ 	    </section>
+ 	    <ul class="user">
+ 	    	<li class="login-link">Войти</li>
+ 	    	<li class="registration-link">Регистрация</li>
+
  		<nav class="main-navigation">
  			<ul> 
  				<li><a href="main.html">Главная</a></li>
  				<li><a href="company.html">Компания</a></li>
  				<li><a href="catalog.html">Каталог</a></li>
  				<li><a href="news.html">Новости</a></li>
- 				<li><a href="special offer.html">Спецпредложения</a></li>
+ 				<li><a href="special offers.html">Спецпредложения</a></li>
  				<li><a href="delivery.html">Доставка</a></li>
  				<li><a href="contacts.html">Контакты</a></li>
 
  		    </ul>
+ 		</nav>
+    <section class="info">
+    	<h2>КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    	<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и </br>
+    	строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
 
+    	<p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>
+    	Техномарт работает со многими транспортными компаниями: </p>
+    	<ul class="company-names">
+    		<li>Деловые линии</li>
+    		<li>Автотрейдинг</li>
+    		<li>ЖелДорЭкспедиция</li>
+    	</ul>
+    	<button><a href="company.html"> подробнее о компании</a></button>
+    </section>
+
+    <section class="contacts">
+    	<h2>контакты</h2> 
+    	
+    	<p>Вы можете забрать товар сами, </br>
+    	заехав в наш офис:</p>
+
+    	<a class="map-address">
+  				<img src="img/map-address.svg" width: 300px; height: 158px; alt="адресс на карте">
+ 		</a>
+
+    	<button><a href="#"> заблудились? напишите нам!</a></button>
+    </section>
+    <footer class="main-footer">
+    	<a class="main-header-logo">
+  				<img src="img/index-logo.svg" width: 109px; height: 19px; alt="логотип Техномарта">
+ 		</a>
+
+ 		<nav class="footer-navigation">
+ 			<ul> 
+ 				<li><a href="company.html">Компания</a></li>
+ 				<li><a href="news.html">Новости</a></li>
+ 				<li><a href="catalog.html">Каталог</a></li>
+ 				<li><a href="delivery.html">Доставка</a></li>
+ 				<li><a href="contacts.html">Контакты</a></li>
+ 		    </ul>
+ 		</nav>
+
+ 		<section class="footer-number and address">
+ 	    <p>
+ 	    	<address>г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8 </br>
+ 	    	+7 (812) 555-05-55 	 
+ 	    	</address>
+ 	    </p>
+ 	    </section>
+
+ 	    <nav class="footer-navigation-extra">
+ 			<ul> 
+ 				<li><a href="materials.html">Материалы</a></li>
+ 				<li><a href="tech.html">Техника</a></li>
+ 				<li><a href="tool.html">Инструмент</a></li>
+ 				<li><a href="special offers.html">Спецпредложения</a></li>
+ 		    </ul>
+ 		</nav>
+    </footer>
+
+    <footer class="extra-footer">
+    	<p>© 2010–2019 Компания «Техномарт» </br>
+    	Все права защищены</p>
+    </footer>
   </body>
 </html>
+
