исправления в индексе + каталог
по каталогу вопрос возник в месте где нужно перфораторы в страницу вставлять, сделал один чтоб показать как я это понимаю, но вроде их нужно не ссылкой а кнопкой делать, как правильно?

--- a/catalog.html
+++ b/catalog.html
@@ -29,10 +29,12 @@
  	    		</p>
  	    	</address>
  	    		
- 	    <ul class="user">
- 	    	<li class="login-link">Войти</li>
- 	    	<li class="registration-link">Регистрация</li>
+ 	 <section class="active-user">  
+ 	    <ul class="username">
+ 	    	<li class="order-link">Мои заказы</li>
+ 	    	<li class="cabinet-link">Личный кабинет</li>
  	    </ul>
+ 	 </section> 
 
  		<nav class="main-navigation">
  			<ul> 
@@ -46,35 +48,52 @@
 
  		    </ul>
  		</nav>
-    <section class="info">
-    	<h2>КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
 
-    	<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и </br>
-    	строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+ 	<section class="menu-catalog's">
+ 		<ul>
+ 			<li><a class="home" href="catalog.html"></a></li>
+ 			<li><a href="#">каталог</a></li>
+ 			<li><a href="#">инструмент</a></li>
+ 			<li><a href="#">перфораторы</a></li>
+ 		</ul>
+ 	</section>
 
-    	<p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>
-    	Техномарт работает со многими транспортными компаниями: </p>
-    	<ul class="company-names">
-    		<li>Деловые линии</li>
-    		<li>Автотрейдинг</li>
-    		<li>ЖелДорЭкспедиция</li>
-    	</ul>
-    	<button><a href="#"> подробнее о компании</a></button>
-    </section>
+ 	<h2>перфораторы</h2>
 
-    <section class="contacts">
-    	<h2>контакты</h2> 
-    	
-    	<p>Вы можете забрать товар сами, </br>
-    	заехав в наш офис:</p>
+ 	<section class="manufacturers">
 
-    	<a class="map-address">
-  				<img src="img/map-address.svg" width="300" height="158" alt="адресс на карте">
- 		</a>
+ 		<p>производители:</p>
 
-    	<a href="#"> заблудились? напишите нам!</a>
-    </section>
-    <footer class="main-footer">
+ 		<ul>
+ 			<li>bosch</li>
+ 			<li>интерскол</li>
+ 			<li>makita</li>
+ 			<li>dewalt</li>
+ 			<li>hitachi</li>
+ 		</ul>
+
+ 		<p>питание:</p>
+
+ 		<ul>
+ 			<li>аккумуляторные</li>
+ 			<li>сетевые</li>
+ 		</ul>
+
+ 		<button>показать</button>
+
+ 	</section>
+
+ 	<section class="list-perforators"> 
+ 		
+ 		<ul>
+ 			<li><a href="#">Перфоратор BOSCH BFG 3000</br>
+ 			22500р.</br>
+ 		    15500р.</a></li>
+ 		</ul>
+
+ 	</section>
+
+ 	<footer class="main-footer">
     	<a class="main-header-logo">
   				<img src="img/index-logo.svg" width="109" height="19" alt="логотип Техномарта">
  		</a>
@@ -108,6 +127,5 @@
     	<p>© 2010–2019 Компания «Техномарт» </br>
     	Все права защищены</p>
     </footer>
-  </body>
-</html>
 
+  </body>
