доработки по ссылкам

--- a/catalog.html
+++ b/catalog.html
@@ -214,12 +214,12 @@
 
     <p class="footer-feedback">
     	<b>Обратная связь:</b>
-    	<a href="mail@htmlacademy.ru"></a>
+    	<a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
     </p>
 
     <p class="footer-developers">
     	<b>Разработано:</b>
-    	<a href="htmlacademy.ru"></a>
+    	<a href="https://htmlacademy.ru">htmlacademy.ru</a>
     </p>
   </body>
 </html>
