--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
 
   		<a class="main-header-logo">
-  			<img src="img/index-logo.svg" width="109" height="19" alt="логотип Техномарта">
+  			<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
  		<ul class="top-menu-navigation">
@@ -99,7 +99,7 @@
     	заехав в наш офис:</p>
 
     	<a class="map-address">
-  				<img src="img/map-address.svg" width="300" height="158" alt="адресс на карте">
+  				<img src="img/map-address.png" width="300" height="158" alt="адресс на карте">
  		</a>
 
     	<a href="#"> заблудились? напишите нам!</a>
@@ -107,7 +107,7 @@
 
     <footer class="main-footer">
     	<a class="main-header-logo">
-  				<img src="img/index-logo.svg" width="109" height="19" alt="логотип Техномарта">
+  				<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
  		<ul> 
