--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
 
   		<a class="main-header-logo">
-  			<img src="img/index-logo.svg" width="109" height="19" alt="логотип Техномарта">
+  			<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
  		<ul class="top-menu-navigation">
@@ -278,7 +278,7 @@
 
  	<footer class="main-footer">
     	<a class="main-header-logo">
-  				<img src="img/index-logo.svg" width="109" height="19" alt="логотип Техномарта">
+  				<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
  		<ul> 
