--- a/catalog.html
+++ b/catalog.html
@@ -163,7 +163,7 @@
  					<span>Перфоратор BOSCH</span>
  					<span>BFG-3000</span>
  				</a>
- 				<img src="img/catalog-item-image-1" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+ 				<img src="img/catalog-item-image-1.png" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
  				<div class="item-button">22500 Р.</div>
  				<a href="#" class="item-button-sale">15500 Р.</a>
  				<div>
