--- a/catalog.html
+++ b/catalog.html
@@ -115,7 +115,7 @@
  					makita
  					</label>
  				</li>
- 				<li> class="filter-option"
+ 				<li class="filter-option">
  					<label>
  						<input type="checkbox" name="dewalt" checked>
  					dewalt
