--- a/index.html
+++ b/index.html
@@ -103,6 +103,32 @@
  		</a>
 
     	<a href="#"> заблудились? напишите нам!</a>
+
+    </section>
+
+    <section class="mail">
+    	
+    	<h2 class="visually-hidden">Форма связи</h2>
+
+    	<form class="mail-form" action="https://echo.htmlacademy.ru" method="post">
+
+    		<p class="mail-item">
+    			<label for="mail-name">Ваше имя:</label>
+    			<input id="mail-name" type="text" name="name-surname" value="" placeholder="Имя Фамилия">	
+    		</p>
+    		<p class="mail-item">
+    			<label for="mail-email">Ваш e-mail:</label>
+    			<input id="mail-email" type="text" name="e-mail" value="" placeholder="email@example.com">	
+    		</p>
+    		<p class="mail-item">
+    			<label for="mail-text">Текст письма:</label>
+    			<input id="mail-text" type="text" name="text" value="" placeholder="В свободной форме">	
+    		</p>
+
+    		<button class="button" type="submit">ОТПРАВИТЬ</button>
+    		
+    	</form>
+
     </section>
 
     <footer class="main-footer">
