--- a/catalog.html
+++ b/catalog.html
@@ -274,6 +274,23 @@
  			</li>
  		</ul>
  	</section>
+
+ 	<section class="basket">
+
+ 		<h2 class="visually-hidden">Корзина</h2>
+
+ 		<form class="basket-form" action="https://echo.htmlacademy.ru" method="post">
+
+ 			<p>Товар добавлен в корзину!</p>
+
+ 			<button class="button" type="submit">ОФОРМИТЬ ЗАКАЗ</button>
+
+ 			<button class="button">ПРОДОЛЖИТЬ ПОКУПКИ</button>
+
+ 		</form>
+
+ 	</section>
+
 	</main>
 
  	<footer class="main-footer">
