--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Каталог</title>
+
   </head>
+
   <body>
+
   	<header class="main-header">
 
   		<a class="main-header-logo">
@@ -13,6 +16,9 @@
 
  		<ul class="top-menu-navigation">
  			<li class="search">Поиск:</li>
+ 			<a class="icon-search">
+  					<img src="img/icon-search.svg" width="17" height="17" alt="иконка поиска">
+ 				</a>
  			<li>
  				<a href="#">Закладки:</a>
  			</li>
@@ -27,6 +33,7 @@
  	</header>
 
  	<main>
+
  	 	<h1>
  			Интернет-магазин </br>
  			строительных материалов </br>
@@ -48,6 +55,7 @@
  	    </ul>
 
  		<nav class="main-navigation">
+
  			<ul> 
  				<li>
  					<a href="index.html">Главная</a>
@@ -71,6 +79,7 @@
  					<a href="#">Контакты</a>
  				</li>
  		    </ul>
+
  		</nav>
 
  		<ul class="menu-catalog">
@@ -128,9 +137,11 @@
  					</label>
  				</li>
  			</ul>
+
  		</fieldset>
 
  		<fieldset>
+
  		<legend>питание:</legend>
 
  		<ul>
@@ -363,6 +374,9 @@
     	<b>Разработано:</b>
     	<a href="https://htmlacademy.ru">htmlacademy.ru</a>
     </p>
+
     </footer>
+
   </body>
+  
 </html>
