--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+
   </head>
+
   <body>
+  	
   	<header class="main-header">
 
   		<a class="main-header-logo">
@@ -13,6 +16,9 @@
 
  		<ul class="top-menu-navigation">
  			<li class="search">Поиск:</li>
+ 				<a class="icon-search">
+  					<img src="img/icon-search.svg" width="17" height="17" alt="иконка поиска">
+ 				</a>
  			<li>
  				<a href="#">Закладки:</a>
  			</li>
@@ -47,6 +53,7 @@
  	    </ul>
 
  		<nav class="main-navigation">
+
  			<ul> 
  				<li>
  					<a href="index.html">Главная</a>
@@ -70,6 +77,7 @@
  					<a href="#">Контакты</a>
  				</li>
  		    </ul>
+
  		</nav>
 
     <section class="info">
@@ -89,6 +97,7 @@
     	</ul>
 
     	<a href="#">подробнее о компании</a>
+
     </section>
 
     <section class="contacts">
@@ -132,6 +141,7 @@
     </section>
 
     <footer class="main-footer">
+
     	<a class="main-header-logo">
   				<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
@@ -179,6 +189,7 @@
     Все права защищены</p>
 
     <div class="footer-social">
+
     	<ul>
     		<li>
     			<a class="social-button" href="#">Вконтакте</a>
@@ -190,6 +201,7 @@
     			<a class="social-button" href="#">Инстаграм</a>
     		</li>
     	</ul>
+
     </div>
 
     <p class="footer-feedback">
@@ -201,7 +213,10 @@
     	<b>Разработано:</b>
     	<a href="https://htmlacademy.ru">htmlacademy.ru</a>
     </p>
+
     </footer>
+
   </body>
+
 </html>
 
