--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     	<p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>
     	Техномарт работает со многими транспортными компаниями: </p>
 
-    	<ul class="company-names">
+    	<ul class="company-names" aria-label="company-names">
     		<li>Деловые линии</li>
     		<li>Автотрейдинг</li>
     		<li>ЖелДорЭкспедиция</li>
