--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
   			<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
+ 		<form class="search">
+ 			<label Поиск:>
+ 				<input type="checkbox" name="search">n
+ 			</label>
+ 		</form>
+
  		<ul class="top-menu-navigation">
- 			<li class="search">Поиск:</li>
- 				<a class="icon-search">
-  					<img src="img/icon-search.svg" width="17" height="17" alt="иконка поиска">
- 				</a>
- 			<li>
  				<a href="#">Закладки:</a>
  			</li>
  			<li>
