--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   			<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
- 		<form class="search">
+ 		<form class="search" aria-label="поиск">
  			<label Поиск:>
- 				<input type="checkbox" name="search">n
+ 				<input type="checkbox" name="search">
  			</label>
  		</form>
 
