--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
 
  		<form class="search" aria-label="поиск">
  			<label Поиск:>
- 				<input type="checkbox" name="search">
+ 				<input type="text" name="search">
  			</label>
  		</form>
 
