--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  		<form class="search" aria-label="поиск">
  			<label Поиск:>
- 				<input type="checkbox" name="search">
+ 				<input type="text" name="search">
  			</label>
  		</form>
 
@@ -124,15 +124,15 @@
 
     		<p class="mail-item">
     			<label for="mail-name">Ваше имя:</label>
-    			<input id="mail-name" type="text" name="name-surname" value="" placeholder="Имя Фамилия">	
+    			<input id="mail-name" type="text" name="name-surname" value="" placeholder="Имя Фамилия"></input>	
     		</p>
     		<p class="mail-item">
     			<label for="mail-email">Ваш e-mail:</label>
-    			<input id="mail-email" type="text" name="e-mail" value="" placeholder="email@example.com">	
+    			<input id="mail-email" type="text" name="e-mail" value="" placeholder="email@example.com"></input>	
     		</p>
     		<p class="mail-item">
     			<label for="mail-text">Текст письма:</label>
-    			<input id="mail-text" type="text" name="text" value="" placeholder="В свободной форме">	
+    			<input id="mail-text" type="text" name="text" value="" placeholder="В свободной форме"></input>	
     		</p>
 
     		<button class="button" type="submit">ОТПРАВИТЬ</button>
