добавил поп апы, изменил поиск

--- a/catalog.html
+++ b/catalog.html
@@ -85,7 +85,7 @@
 
  		<ul class="menu-catalog">
  			<li>
- 				<a class="home" href="catalog.html" aria-label="update page"></a>
+ 				<a class="home" href="catalog.html" aria-label="обновить страницу"></a>
  			</li>
  			<li>
  				<a href="#">каталог</a>
@@ -166,7 +166,7 @@
 
  	</form>
 
- 	<section class="list-perforators" aria-label="list of perforators">
+ 	<section class="list-perforators" aria-label="список перфораторов">
 
  		<h2 class="visually-hidden">ПЕРФОРАТОРЫ</h2>
  		
@@ -297,11 +297,7 @@
 
  			<p>Товар добавлен в корзину!</p>
 
- 			<button class="button" aria-label="close">
- 				<a class="close-icon">
- 					<img src="img/elements/icon-close.svg">
- 				</a>
- 			</button>
+ 			<button type="button" aria-label="закрыть попап"></button>
 
  			<button class="button" type="submit">ОФОРМИТЬ ЗАКАЗ</button>
 
@@ -314,6 +310,7 @@
 	</main>
 
  	<footer class="main-footer">
+
     	<a class="main-header-logo">
   				<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
