переделал кнопики на ссылки

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
  		</a>
 
  		<form class="search" aria-label="поиск">
- 			<label Поиск:>
+ 			<label>Поиск:
  				<input type="text" name="search">
  			</label>
  		</form>
@@ -166,7 +166,7 @@
 
  	</form>
 
- 	<section class="list-perforators" aria-label="список перфораторов">
+ 	<section class="list-perforators">
 
  		<h2 class="visually-hidden">ПЕРФОРАТОРЫ</h2>
  		
@@ -297,7 +297,7 @@
 
  			<p>Товар добавлен в корзину!</p>
 
- 			<button type="button" aria-label="закрыть попап"></button>
+ 			<a class="button" href="#" aria-label="закрыть попап"></a>
 
  			<button class="button" type="submit">ОФОРМИТЬ ЗАКАЗ</button>
 
