--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     	<p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>
     	Техномарт работает со многими транспортными компаниями: </p>
 
-    	<ul class="company-names" aria-label="имена компаний">
+    	<ul class="company-names">
     		<li>Деловые линии</li>
     		<li>Автотрейдинг</li>
     		<li>ЖелДорЭкспедиция</li>
@@ -118,7 +118,7 @@
 
     <div class="map-popup" aria-label="полная карта">
 
-    	<button type="button" aria-label="закрыть попап"></button>
+    	<a class="button" href="#" aria-label="закрыть попап"></a>
 
     	<a class="map-full">
   				<img src="img/map-full" width="940" height="446" alt="полный адресс на карте">
@@ -132,7 +132,7 @@
 
     	<form class="mail-form" action="https://echo.htmlacademy.ru" method="post">
 
-    		<button type="button" aria-label="закрыть попап"></button>
+    		<a class="button" href="#" aria-label="закрыть попап"></a>
 
     		<p class="mail-item">
     			<label for="mail-name">Ваше имя:</label>
@@ -145,6 +145,7 @@
     		<p class="mail-item">
     			<label for="mail-text">Текст письма:</label>
     			<input id="mail-text" type="text" name="text" placeholder="В свободной форме">
+    		</p>
 
     		<button class="button" type="submit">ОТПРАВИТЬ</button>
     		
