изменил на кнопки

--- a/catalog.html
+++ b/catalog.html
@@ -297,9 +297,9 @@
 
  			<p>Товар добавлен в корзину!</p>
 
- 			<a class="button" href="#" aria-label="закрыть попап"></a>
+ 			<button class="close-popup" type="button" aria-label="закрыть попап"></button>
 
- 			<button class="button" type="submit">ОФОРМИТЬ ЗАКАЗ</button>
+ 			<a class="button" href="#">ОФОРМИТЬ ЗАКАЗ</a>
 
  			<a class="button" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</button>
 
