--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  		</a>
 
  		<form class="search" aria-label="поиск">
- 			<label Поиск:>
+ 			<label>Поиск:
  				<input type="text" name="search">
  			</label>
  		</form>
@@ -118,7 +118,7 @@
 
     <div class="map-popup" aria-label="полная карта">
 
-    	<a class="button" href="#" aria-label="закрыть попап"></a>
+    	<button class="close-popup" type="button" aria-label="закрыть попап"></button>
 
     	<a class="map-full">
   				<img src="img/map-full" width="940" height="446" alt="полный адресс на карте">
@@ -132,7 +132,7 @@
 
     	<form class="mail-form" action="https://echo.htmlacademy.ru" method="post">
 
-    		<a class="button" href="#" aria-label="закрыть попап"></a>
+    		<button class="close-popup" type="button" aria-label="закрыть попап"></button>
 
     		<p class="mail-item">
     			<label for="mail-name">Ваше имя:</label>
