--- a/index.html
+++ b/index.html
@@ -84,40 +84,44 @@
 
  		</nav>
 
-    <section class="info">
+	<div class="index-columns">
 
-    	<h2>КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
+    	<section class="info">
 
-    	<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и </br>
-    	строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+    		<h2>КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
 
-    	<p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>
-    	Техномарт работает со многими транспортными компаниями: </p>
+    		<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и </br>
+    		строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
 
-    	<ul class="company-names">
-    		<li>Деловые линии</li>
-    		<li>Автотрейдинг</li>
-    		<li>ЖелДорЭкспедиция</li>
-    	</ul>
+    		<p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>
+    		Техномарт работает со многими транспортными компаниями: </p>
+
+    		<ul class="company-names">
+    			<li>Деловые линии</li>
+    			<li>Автотрейдинг</li>
+    			<li>ЖелДорЭкспедиция</li>
+    		</ul>
 
     	<a href="#">подробнее о компании</a>
 
-    </section>
+    	</section>
 
-    <section class="contacts">
+    	<section class="contacts">
 
-    	<h2>контакты</h2> 
+    		<h2>контакты</h2> 
     	
-    	<p>Вы можете забрать товар сами, </br>
-    	заехав в наш офис:</p>
+    		<p>Вы можете забрать товар сами, </br>
+    		заехав в наш офис:</p>
 
-    	<a class="map-address">
-  				<img src="img/map-address.png" width="300" height="158" alt="адресс на карте">
- 		</a>
+    		<a class="map-address">
+  					<img src="img/map-address.png" width="300" height="158" alt="адресс на карте">
+ 			</a>
 
-    	<a href="#"> заблудились? напишите нам!</a>
+    		<a href="#"> заблудились? напишите нам!</a>
 
-    </section>
+  	  	</section>
+
+    </div>
 
     <div class="map-popup" aria-label="полная карта">
 
@@ -162,44 +166,52 @@
   				<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
- 		<ul> 
- 			<li>
- 				<a href="#">Компания</a>
- 			</li>
- 			<li>
- 				<a href="#">Новости</a>
- 			</li>
- 			<li>
- 				<a href="catalog.html">Каталог</a>
- 			</li>
- 			<li>
- 				<a href="#">Доставка</a>
- 			</li>
- 			<li>
- 				<a href="#">Контакты</a>
- 			</li>
- 		</ul>
- 	    
+ 		<div class="footer-navigation">	
+
+	 		<ul> 
+	 			<li>
+	 				<a href="#">Компания</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Новости</a>
+	 			</li>
+	 			<li>
+	 				<a href="catalog.html">Каталог</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Доставка</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Контакты</a>
+	 			</li>
+	 		</ul>
+
+ 	    </div>
+
  	    <address> 
  	    	<p>г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8 </br>
  	    	<a href="tel:+78125550555">+7 (812) 555-05-55</a>
  	    	</p>	 
  	    </address>
 
- 		<ul> 
- 			<li>
- 				<a href="#">Материалы</a>
- 			</li>
- 			<li>
- 				<a href="#">Техника</a>
- 			</li>
- 			<li>
- 				<a href="#">Инструмент</a>
- 			</li>
- 			<li>
- 				<a href="#">Спецпредложения</a>
- 			</li>
- 	    </ul>
+ 	    <div class="footer-extras">
+
+	 		<ul> 
+	 			<li>
+	 				<a href="#">Материалы</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Техника</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Инструмент</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Спецпредложения</a>
+	 			</li>
+	 	    </ul>
+
+	 	</div>
 
     <p class="footer-copyright">© 2010–2019 Компания «Техномарт» </br>
     Все права защищены</p>
