--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
   </head>
 
-  <body>
+  <body class='inner-page'>
 
   	<header class="main-header">
 
@@ -319,23 +319,27 @@
   				<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
  		</a>
 
- 		<ul> 
- 			<li>
- 				<a href="#">Компания</a>
- 			</li>
- 			<li>
- 				<a href="#">Новости</a>
- 			</li>
- 			<li>
- 				<a href="#">Каталог</a>
- 			</li>
- 			<li>
- 				<a href="#">Доставка</a>
- 			</li>
- 			<li>
- 				<a href="#">Контакты</a>
- 			</li>
- 		   </ul>
+ 		<div class="footer-navigation">
+
+	 		<ul> 
+	 			<li>
+	 				<a href="#">Компания</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Новости</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Каталог</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Доставка</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Контакты</a>
+	 			</li>
+	 		   </ul>
+
+	 	</div>
  	    
  	<address> 
  	    <p>г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8 </br>
@@ -343,21 +347,25 @@
  	    </p> 
  	</address>
 
- 		<ul> 
- 			<li>
- 				<a href="#">Материалы</a>
- 			</li>
- 			<li>
- 				<a href="#">Техника</a>
- 			</li>
- 			<li>
- 				<a href="#">Инструмент</a>
- 			</li>
- 			<li>
- 				<a href="#">Спецпредложения</a>
- 			</li>
- 		   </ul>
+ 		<div class="footer-extras">
+
+	 		<ul> 
+	 			<li>
+	 				<a href="#">Материалы</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Техника</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Инструмент</a>
+	 			</li>
+	 			<li>
+	 				<a href="#">Спецпредложения</a>
+	 			</li>
+	 		   </ul>
     
+    	</div>
+
     <p>© 2010–2019 Компания «Техномарт» </br>
     Все права защищены</p>
 
