--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
  				<a href="#">Корзина:</a>
  			</li>
  			<li>
- 				<a class="button" href="#">Оформить заказ</a>
+ 				<a class="button-green" href="#">Оформить заказ</a>
  			</li>	
  		</ul>
 
