--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   	
   	<header class="main-header">
 
+  		<div class="main-header-top">
+
   		<a class="main-header-logo">
-  			<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
+  			<img src="img/index-logo.png" width="220" height="47" alt="логотип Техномарта">
  		</a>
 
  		<form class="search" aria-label="поиск">
@@ -24,17 +26,20 @@
  		</form>
 
  		<ul class="top-menu-navigation">
- 				<a href="#">Закладки:</a>
+ 			<li class="top-menu-navigation-bookmarks">
+ 				<a class='top-menu-navigation-bookmarks-link' href="#">Закладки: 0</a>
  			</li>
  			<li>
- 				<a href="#">Корзина:</a>
+ 				<a href="#">Корзина: 0</a>
  			</li>
  			<li>
  				<a class="button-green" href="#">Оформить заказ</a>
  			</li>	
  		</ul>
 
- 	</header>
+ 		</div>
+
+ 		<div>
 
  			<h1>
  				Интернет-магазин </br>
@@ -55,6 +60,10 @@
  	    		<a href="#">Регистрация</a>
  	    	</li>
  	    </ul>
+
+ 	    </div>
+
+ 	    <div>
 
  		<nav class="main-navigation">
 
@@ -83,6 +92,10 @@
  		    </ul>
 
  		</nav>
+
+ 		</div>
+
+ 	</header>
 
 	<div class="index-columns">
 
