--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
  		</a>
 
  		<form class="search" aria-label="поиск">
+
  			<label>Поиск:
  				<input type="text" name="search">
  			</label>
+
  		</form>
 
  		<ul class="top-menu-navigation">
  			<li class="top-menu-navigation-bookmarks">
- 				<a class='top-menu-navigation-bookmarks-link' href="#">Закладки: 0</a>
+ 				<a class="top-menu-navigation-bookmarks-link" href="#">Закладки: 0</a>
  			</li>
- 			<li>
- 				<a href="#">Корзина: 0</a>
+ 			<li class="top-menu-navigation-cart">
+ 				<a class="top-menu-navigation-cart-link" href="#">Корзина: 0</a>
  			</li>
  			<li>
  				<a class="button-green" href="#">Оформить заказ</a>
@@ -39,7 +41,7 @@
 
  		</div>
 
- 		<div>
+ 		<div class="main-header-middle">
 
  			<h1>
  				Интернет-магазин </br>
@@ -48,13 +50,15 @@
  			</h1>
  	    
  	    <address> 
- 	    	<a href="tel:+78125550555">+7 (812) 555-05-55</a> </br>
+
+ 	    	<a class="address-top" href="tel:+78125550555">+7 (812) 555-05-55</a> </br>
  	    	г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8
+
  	    </address>
  	    		
  	    <ul class="user">
  	    	<li class="login-link">
- 	    		<a href="login.html">Войти</a>
+ 	    		<a class="icon-login" href="login.html">Войти</a>
  	    	</li>
  	    	<li class="registration-link">
  	    		<a href="#">Регистрация</a>
