--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
  	    <address> 
 
  	    	<a class="address-top" href="tel:+78125550555">+7 (812) 555-05-55</a> </br>
- 	    	г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8
+ 	    	<span class="address-text"> г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8 </span>
 
  	    </address>
  	    		
