--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
     	<section class="info">
 
-    		<h2>КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
+    		<h2 class="company-nechnomart">КОМПАНИЯ <<ТЕХНОМАРТ>></h2>
 
     		<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и </br>
     		строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
 
-    		<p>Мы можем доставить ваш товар в самые отдаленные точки России! </br>
+    		<p class="padding-for-line">Мы можем доставить ваш товар в самые отдаленные точки России! </br>
     		Техномарт работает со многими транспортными компаниями: </p>
 
     		<ul class="company-names">
@@ -125,7 +125,7 @@
 
     	<section class="contacts">
 
-    		<h2>контакты</h2> 
+    		<h2>КОНТАКТЫ</h2> 
     	
     		<p>Вы можете забрать товар сами, </br>
     		заехав в наш офис:</p>
