--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     			<li>ЖелДорЭкспедиция</li>
     		</ul>
 
-    	<a href="#">подробнее о компании</a>
+    	<a class="info_button" href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
 
     	</section>
 
@@ -134,7 +134,7 @@
   					<img src="img/map-address.png" width="300" height="158" alt="адресс на карте">
  			</a>
 
-    		<a href="#"> заблудились? напишите нам!</a>
+    		<a class="map_button" href="#"> заблудились? напишите нам!</a>
 
   	  	</section>
 
