--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
  		<nav class="main-navigation">
 
- 			<ul> 
+ 			<ul class="main-navigation-ul"> 
  				<li>
  					<a href="index.html">Главная</a>
  				</li>
@@ -114,9 +114,9 @@
     		Техномарт работает со многими транспортными компаниями: </p>
 
     		<ul class="company-names">
-    			<li>Деловые линии</li>
-    			<li>Автотрейдинг</li>
-    			<li>ЖелДорЭкспедиция</li>
+    			<li class="business-line">Деловые линии</li>
+    			<li class="auto-trading">Автотрейдинг</li>
+    			<li class="expedition">ЖелДорЭкспедиция</li>
     		</ul>
 
     	<a class="info_button" href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
@@ -179,34 +179,34 @@
 
     <footer class="main-footer">
 
-    	<a class="main-header-logo">
-  				<img src="img/index-logo.png" width="109" height="19" alt="логотип Техномарта">
+    	<a class="main-footer-logo">
+  				<img src="img/index-logo.png" width="220" height="68" alt="логотип Техномарта">
  		</a>
 
  		<div class="footer-navigation">	
 
-	 		<ul> 
+	 		<ul class="footer-navigation-ul"> 
 	 			<li>
 	 				<a href="#">Компания</a>
 	 			</li>
 	 			<li>
-	 				<a href="#">Новости</a>
+	 				<a class= "news" href="#">Новости</a>
 	 			</li>
 	 			<li>
-	 				<a href="catalog.html">Каталог</a>
+	 				<a class= "catalog" href="catalog.html">Каталог</a>
 	 			</li>
 	 			<li>
-	 				<a href="#">Доставка</a>
+	 				<a class= "delivery" href="#">Доставка</a>
 	 			</li>
 	 			<li>
-	 				<a href="#">Контакты</a>
+	 				<a class= "contacts" href="#">Контакты</a>
 	 			</li>
 	 		</ul>
 
  	    </div>
 
- 	    <address> 
- 	    	<p>г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8 </br>
+ 	    <address class="footer-address"> 
+ 	    	<p class="footer-address-text">г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8 </br>
  	    	<a href="tel:+78125550555">+7 (812) 555-05-55</a>
  	    	</p>	 
  	    </address>
@@ -229,6 +229,10 @@
 	 	    </ul>
 
 	 	</div>
+
+	</footer>
+
+<div class="bottom-footer">
 
     <p class="footer-copyright">© 2010–2019 Компания «Техномарт» </br>
     Все права защищены</p>
@@ -259,7 +263,7 @@
     	<a href="https://htmlacademy.ru">htmlacademy.ru</a>
     </p>
 
-    </footer>
+<div class="bottom-footer">
 
   </body>
 
