--- a/index.html
+++ b/index.html
@@ -213,18 +213,18 @@
 
  	    <div class="footer-extras">
 
-	 		<ul> 
+	 		<ul class="footer-extras-ul"> 
 	 			<li>
-	 				<a href="#">Материалы</a>
+	 				<a class="materials" href="#">Материалы</a>
 	 			</li>
 	 			<li>
-	 				<a href="#">Техника</a>
+	 				<a class="technics" href="#">Техника</a>
 	 			</li>
 	 			<li>
-	 				<a href="#">Инструмент</a>
+	 				<a class="instruments" href="#">Инструмент</a>
 	 			</li>
 	 			<li>
-	 				<a href="#">Спецпредложения</a>
+	 				<a class="special-offers" href="#">Спецпредложения</a>
 	 			</li>
 	 	    </ul>
 
