--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,97 @@
 
   </head>
 
-  <body class='inner-page'>
+  <body>
+
+    <header class="main-header">
+
+      <div class="main-header-top">
+
+      <a class="main-header-logo">
+        <img src="img/index-logo.png" width="220" height="47" alt="логотип Техномарта">
+    </a>
+
+    <form class="search" aria-label="поиск">
+
+      <label>Поиск:
+        <input type="text" name="search">
+      </label>
+
+    </form>
+
+    <ul class="top-menu-navigation">
+      <li class="top-menu-navigation-bookmarks">
+        <a class="top-menu-navigation-bookmarks-link" href="#">Закладки: 0</a>
+      </li>
+      <li class="top-menu-navigation-cart">
+        <a class="top-menu-navigation-cart-link" href="#">Корзина: 0</a>
+      </li>
+      <li>
+        <a class="button-green" href="#">Оформить заказ</a>
+      </li> 
+    </ul>
+
+    </div>
+
+    <div class="main-header-middle">
+
+      <h1>
+        Интернет-магазин </br>
+        строительных материалов </br>
+        и инструментов для ремонта
+      </h1>
+      
+      <address> 
+
+        <a class="address-top" href="tel:+78125550555">+7 (812) 555-05-55</a> </br>
+        <span class="address-text"> г.Санкт-Петербург, ул.Б.Конющенная, д. 19/8 </span>
+
+      </address>
+          
+      <ul class="user">
+        <li class="login-link">
+          <a class="icon-login" href="login.html">Войти</a>
+        </li>
+        <li class="registration-link">
+          <a href="#">Регистрация</a>
+        </li>
+      </ul>
+
+      </div>
+
+      <div class="main-header-bottom">
+
+    <nav class="main-navigation">
+
+      <ul class="main-navigation-ul"> 
+        <li>
+          <a href="index.html">Главная</a>
+        </li>
+        <li>
+          <a href="#">Компания</a>
+        </li>
+        <li>
+          <a href="catalog.html">Каталог</a>
+        </li>
+        <li>
+          <a href="#">Новости</a>
+        </li>
+        <li>
+          <a href="#">Спецпредложения</a>
+        </li>
+        <li>
+          <a href="#">Доставка</a>
+        </li>
+        <li>
+          <a href="#">Контакты</a>
+        </li>
+        </ul>
+
+    </nav>
+
+    </div>
+
+  </header>
 
   	<header class="main-header">
 
